--- a/MyHome.Api/appsettings.json
+++ b/MyHome.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-B2DMPTU\\SQLEXPRESS;Initial Catalog = MyHomeDb; Integrated Security = True"
+    "DefaultConnectionString": "Data Source=.\\SQLEXPRESS;Initial Catalog = MyHomeDb; Integrated Security = True"
   },
   "CloudinarySettings": {
     "Cloud": "dnu0uiveo",
